update clear with using list-girl-stored.csv

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -973,6 +973,10 @@
                     phaseIndicator.textContent = '🔄 Phase 1: Running Categories Crawler...';
                     phaseIndicator.style.color = '#2196F3';
                     break;
+                case 'sync':
+                    phaseIndicator.textContent = '🔄 Preparing Phase 2: Synchronizing CSV data...';
+                    phaseIndicator.style.color = '#FF9800';
+                    break;
                 case 'girls':
                     phaseIndicator.textContent = '🔄 Phase 2: Running Girls Crawler...';
                     phaseIndicator.style.color = '#4CAF50';
